--- a/src/main/resources/static/StudentRegistration.html
+++ b/src/main/resources/static/StudentRegistration.html
@@ -182,11 +182,11 @@
 <main id="main" class="main">
 
     <div class="pagetitle">
-        <h1>Add Student</h1>
+        <h1>Student Class Registration</h1>
         <nav>
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                <li class="breadcrumb-item">Student</li>
+                <li class="breadcrumb-item">Student Class Registration</li>
             </ol>
         </nav>
     </div><!-- End Page Title -->
@@ -201,61 +201,57 @@
 
                             <!-- Floating Labels Form -->
                             <form class="row g-3">
-                                <div class="col-md-12">
+                                <div class="col-md-6">
                                     <div class="form-floating">
                                         <input type="text" class="form-control" id="floatingFName"
                                                placeholder="Your Name">
-                                        <label for="floatingFName">First Name</label>
-                                    </div>
-                                </div>
-                                <div class="col-md-12">
-                                    <div class="form-floating">
-                                        <input type="text" class="form-control" id="floatingLName"
-                                               placeholder="Your Name">
-                                        <label for="floatingLName">Last Name</label>
-                                    </div>
-                                </div>
-                                <div class="col-md-12">
-                                    <div class="form-floating">
-                                        <input type="date" class="form-control" id="floatingDOB"
-                                               placeholder="Your Name">
-                                        <label for="floatingDOB">Date of Birth</label>
-                                    </div>
-                                </div>
-                                <div class="col-md-12">
-                                    <div class="form-floating">
-                                        <input type="email" class="form-control" id="floatingEmail"
-                                               placeholder="Your Email">
-                                        <label for="floatingEmail">Email</label>
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <div class="form-floating">
-                                        <textarea class="form-control" placeholder="Address" id="floatingTextarea"
-                                                  style="height: 100px;"></textarea>
-                                        <label for="floatingTextarea">Address</label>
+                                        <label for="floatingFName">Student ID</label>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-floating">
-                                        <input type="email" class="form-control" id="floatingMobile"
-                                               placeholder="Your Email">
-                                        <label for="floatingMobile">Mobile Number</label>
+                                        <input type="text" class="form-control" id="floatingLName"
+                                               placeholder="Your Name">
+                                        <label for="floatingLName">First Name</label>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-6">
+                                    <div class="form-floating mb-3">
+                                        <select class="form-select" id="floatingSelectClass" aria-label="State">
+                                            <option selected>Select Class Name</option>
+                                            <option value="1">Oregon</option>
+                                            <option value="2">DC</option>
+                                        </select>
+                                        <label for="floatingSelectClass">Class Name</label>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-6">
+                                    <div class="form-floating mb-3">
+                                        <select class="form-select" id="floatingSelect" aria-label="State">
+                                            <option selected>Select Institute</option>
+                                            <option value="1">Oregon</option>
+                                            <option value="2">DC</option>
+                                        </select>
+                                        <label for="floatingSelect">Institute</label>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-floating mb-3">
-                                        <select class="form-select" id="floatingSelect" aria-label="State">
-                                            <option selected>Select Status</option>
+                                        <select class="form-select" id="floatingSelectStatus" aria-label="State">
+                                            <option selected>Select Registration Status</option>
                                             <option value="1">Oregon</option>
                                             <option value="2">DC</option>
                                         </select>
-                                        <label for="floatingSelect">State</label>
+                                        <label for="floatingSelectStatus">Registration status</label>
                                     </div>
                                 </div>
+
+
                                 <div class="text-center">
-                                    <button type="submit" class="btn btn-primary">Add Student</button>
-                                    <button type="reset" class="btn btn-secondary">Update Student</button>
+                                    <button type="submit" class="btn btn-primary">Add Registration</button>
+                                    <button type="reset" class="btn btn-secondary">Update Registration</button>
                                 </div>
                             </form><!-- End floating Labels Form -->
                         </div>
@@ -267,15 +263,15 @@
             <div class="col-lg-6">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Student table</h5>
+                        <h5 class="card-title">Student Class registration table</h5>
                         <!-- Table with stripped rows -->
                         <table class="table datatable">
                             <thead>
                             <tr>
                                 <th scope="col">#</th>
-                                <th scope="col">Name</th>
-                                <th scope="col">Email</th>
-                                <th scope="col">Mobile</th>
+                                <th scope="col">Student ID</th>
+                                <th scope="col">First Name</th>
+                                <th scope="col">Class Name</th>
                                 <th scope="col">Modify</th>
                             </tr>
                             </thead>
