--- a/src/main/resources/static/TeacherRegistration.html
+++ b/src/main/resources/static/TeacherRegistration.html
@@ -83,12 +83,12 @@
             </a>
             <ul id="components-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                 <li>
-                    <a href="components-alerts.html">
+                    <a href="user.html">
                         <i class="bi bi-circle"></i><span>User</span>
                     </a>
                 </li>
                 <li>
-                    <a href="components-accordion.html">
+                    <a href="privilege.html">
                         <i class="bi bi-circle"></i><span>Privilege</span>
                     </a>
 
@@ -99,21 +99,21 @@
 
 
         <li class="nav-item">
-            <a class="nav-link collapsed" href="users-profile.html">
+            <a class="nav-link collapsed" href="Student.html">
                 <i class="bi bi-person"></i>
                 <span>Add Student</span>
             </a>
         </li><!-- End Profile Page Nav -->
 
         <li class="nav-item">
-            <a class="nav-link collapsed" href="pages-faq.html">
+            <a class="nav-link collapsed" href="StudentRegistration.html">
                 <i class="bi bi-question-circle"></i>
                 <span>Student Class Registration</span>
             </a>
         </li><!-- End F.A.Q Page Nav -->
 
         <li class="nav-item">
-            <a class="nav-link collapsed" href="pages-contact.html">
+            <a class="nav-link collapsed" href="StudentAttendance.html">
                 <i class="bi bi-envelope"></i>
                 <span>Student Attendance</span>
             </a>
@@ -127,12 +127,12 @@
             </a>
             <ul id="tables-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                 <li>
-                    <a href="tables-general.html">
+                    <a href="InstituteImplementation.html">
                         <i class="bi bi-circle"></i><span>Institute</span>
                     </a>
                 </li>
                 <li>
-                    <a href="tables-data.html">
+                    <a href="ClassImplementation.html">
                         <i class="bi bi-circle"></i><span>Class</span>
                     </a>
                 </li>
@@ -146,12 +146,12 @@
             </a>
             <ul id="charts-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                 <li>
-                    <a href="charts-chartjs.html">
+                    <a href="Teacher.html">
                         <i class="bi bi-circle"></i><span>Add Teacher</span>
                     </a>
                 </li>
                 <li>
-                    <a href="charts-apexcharts.html">
+                    <a href="TeacherRegistration.html">
                         <i class="bi bi-circle"></i><span>Teacher Registration</span>
                     </a>
                 </li>
@@ -159,7 +159,7 @@
         </li><!-- End Charts Nav -->
 
         <li class="nav-item">
-            <a class="nav-link collapsed" href="users-profile.html">
+            <a class="nav-link collapsed" href="Parent.html">
                 <i class="bi bi-person"></i>
                 <span>Add Parent</span>
             </a>
