--- a/src/main/resources/static/InstituteImplementation.html
+++ b/src/main/resources/static/InstituteImplementation.html
@@ -217,7 +217,7 @@
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-floating">
-                                        <input type="date" class="form-control" id="floatingDOB"
+                                        <input type="text" class="form-control" id="floatingDOB"
                                                placeholder="Your Name">
                                         <label for="floatingDOB">Mobile Number</label>
                                     </div>
