student,teacher,attendance

--- a/src/main/resources/static/Student.html
+++ b/src/main/resources/static/Student.html
@@ -243,6 +243,7 @@
                                         <label for="floatingMobile">Mobile Number</label>
                                     </div>
                                 </div>
+
                                 <div class="col-md-6">
                                     <div class="form-floating mb-3">
                                         <select class="form-select" id="floatingSelect" aria-label="State">
@@ -250,9 +251,93 @@
                                             <option value="1">Oregon</option>
                                             <option value="2">DC</option>
                                         </select>
-                                        <label for="floatingSelect">State</label>
+                                        <label for="floatingSelect">Status</label>
                                     </div>
                                 </div>
+                                <div class="col-md-12">
+                                    <div class="form-floating">
+                                        <input type="Password" class="form-control" id="floatingSPassword"
+                                               placeholder="Your Name">
+                                        <label for="floatingSPassword">Create Password</label>
+                                    </div>
+                                </div>
+
+
+                                <div class="pagetitle">
+                                    <h1>Add Parent</h1>
+                                    <nav>
+                                        <ol class="breadcrumb">
+                                            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                                            <li class="breadcrumb-item">Parent</li>
+                                        </ol>
+                                    </nav>
+                                </div>
+
+                                <div class="col-12">
+                                    <div class="form-floating">
+                                        <input type="text" class="form-control" placeholder="Address" id="floatingNIC"
+                                                  ></input>
+                                        <label for="floatingNIC">NIC</label>
+                                    </div>
+                                </div>
+
+                                <div class="col-6">
+                                    <div class="form-floating">
+                                        <input type="text" class="form-control" placeholder="Address" id="floatingParFName"
+                                               ></input>
+                                        <label for="floatingParFName">First name</label>
+                                    </div>
+                                </div>
+
+                                <div class="col-6">
+                                    <div class="form-floating">
+                                        <input type="text" class="form-control" placeholder="Address" id="floatingParLName"
+                                        ></input>
+                                        <label for="floatingParLName">Last name</label>
+                                    </div>
+                                </div>
+
+                                <div class="col-6">
+                                    <div class="form-floating">
+                                        <textarea class="form-control" placeholder="Address" id="floatingParAddress"></textarea>
+                                        <label for="floatingParAddress">Address</label>
+                                    </div>
+                                </div>
+
+                                <div class="col-6">
+                                    <div class="form-floating">
+                                        <input type="text" class="form-control" placeholder="Address" id="floatingParMobile"></input>
+                                        <label for="floatingParMobile">Mobile</label>
+                                    </div>
+                                </div>
+
+                                <div class="col-6">
+                                    <div class="form-floating">
+                                        <input type="email" class="form-control" placeholder="Address" id="floatingParemail"></input>
+                                        <label for="floatingParemail">E mail</label>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-6">
+                                    <div class="form-floating mb-3">
+                                        <select class="form-select" id="floatingSelectPStatus" aria-label="State">
+                                            <option selected>Select Status</option>
+                                            <option value="1">Oregon</option>
+                                            <option value="2">DC</option>
+                                        </select>
+                                        <label for="floatingSelectPStatus">Status</label>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-12">
+                                    <div class="form-floating">
+                                        <input type="Password" class="form-control" id="floatingSParPassword"
+                                               placeholder="Your Name">
+                                        <label for="floatingSParPassword">Create Password</label>
+                                    </div>
+                                </div>
+
+
                                 <div class="text-center">
                                     <button type="submit" class="btn btn-primary">Add Student</button>
                                     <button type="reset" class="btn btn-secondary">Update Student</button>
