--- a/src/main/resources/static/StudentAttendance.html
+++ b/src/main/resources/static/StudentAttendance.html
@@ -186,7 +186,7 @@
         <nav>
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                <li class="breadcrumb-item">Student Class Registration</li>
+                <li class="breadcrumb-item">Student Attendance</li>
             </ol>
         </nav>
     </div><!-- End Page Title -->
@@ -203,16 +203,9 @@
                             <form class="row g-3">
                                 <div class="col-md-6">
                                     <div class="form-floating">
-                                        <input type="text" class="form-control" id="floatingFName"
+                                        <input type="date" class="form-control" id="floatingFName"
                                                placeholder="Your Name">
-                                        <label for="floatingFName">Student ID</label>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-floating">
-                                        <input type="text" class="form-control" id="floatingLName"
-                                               placeholder="Your Name">
-                                        <label for="floatingLName">First Name</label>
+                                        <label for="floatingFName">Date</label>
                                     </div>
                                 </div>
 
@@ -237,21 +230,79 @@
                                         <label for="floatingSelect">Institute</label>
                                     </div>
                                 </div>
+
                                 <div class="col-md-6">
-                                    <div class="form-floating mb-3">
-                                        <select class="form-select" id="floatingSelectStatus" aria-label="State">
-                                            <option selected>Select Registration Status</option>
-                                            <option value="1">Oregon</option>
-                                            <option value="2">DC</option>
-                                        </select>
-                                        <label for="floatingSelectStatus">Registration status</label>
+                                    <label>Reg Count : </label><br>
+                                    <label>Present Count :</label><br>
+                                    <label>Absent Count :</label>
+                                </div>
+
+
+                                <div class="card">
+                                    <div class="card-body">
+                                        <h5 class="card-title">List of Student</h5>
+
+                                        <!-- Small tables -->
+                                        <table class="table table-sm">
+                                            <thead>
+                                            <tr>
+                                                <th scope="col">#</th>
+                                                <th scope="col">Name</th>
+                                                <th scope="col">Position</th>
+                                                <th scope="col">Age</th>
+                                                <th scope="col">Start Date</th>
+                                            </tr>
+                                            </thead>
+                                            <tbody>
+                                            <tr>
+                                                <th scope="row">1</th>
+                                                <td>Brandon Jacob</td>
+                                                <td>Designer</td>
+                                                <td>28</td>
+                                                <td>2016-05-25</td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row">2</th>
+                                                <td>Bridie Kessler</td>
+                                                <td>Developer</td>
+                                                <td>35</td>
+                                                <td>2014-12-05</td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row">3</th>
+                                                <td>Ashleigh Langosh</td>
+                                                <td>Finance</td>
+                                                <td>45</td>
+                                                <td>2011-08-12</td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row">4</th>
+                                                <td>Angus Grady</td>
+                                                <td>HR</td>
+                                                <td>34</td>
+                                                <td>2012-06-11</td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row">5</th>
+                                                <td>Raheem Lehner</td>
+                                                <td>Dynamic Division Officer</td>
+                                                <td>47</td>
+                                                <td>2011-04-19</td>
+                                            </tr>
+                                            </tbody>
+                                        </table>
+                                        <!-- End small tables -->
+
                                     </div>
                                 </div>
 
 
+
+
+
                                 <div class="text-center">
-                                    <button type="submit" class="btn btn-primary">Add Registration</button>
-                                    <button type="reset" class="btn btn-secondary">Update Registration</button>
+                                    <button type="submit" class="btn btn-primary">Add Attendance</button>
+
                                 </div>
                             </form><!-- End floating Labels Form -->
                         </div>
@@ -269,9 +320,9 @@
                             <thead>
                             <tr>
                                 <th scope="col">#</th>
-                                <th scope="col">Student ID</th>
-                                <th scope="col">First Name</th>
-                                <th scope="col">Class Name</th>
+                                <th scope="col">Class name</th>
+                                <th scope="col">Institute name</th>
+                                <th scope="col">Present count</th>
                                 <th scope="col">Modify</th>
                             </tr>
                             </thead>
