--- a/src/main/resources/static/Teacher.html
+++ b/src/main/resources/static/Teacher.html
@@ -262,6 +262,14 @@
                                         <label for="floatingSelect">Teacher Status</label>
                                     </div>
                                 </div>
+
+                                <div class="col-md-12">
+                                    <div class="form-floating">
+                                        <input type="Password" class="form-control" id="floatingTPassword"
+                                               placeholder="Your Name">
+                                        <label for="floatingTPassword">Create Password</label>
+                                    </div>
+                                </div>
                                 <div class="text-center">
                                     <button type="submit" class="btn btn-primary">Add Teacher</button>
                                     <button type="reset" class="btn btn-secondary">Update Teacher</button>
