Add Update Delete Teacher

--- a/src/main/resources/static/Student.html
+++ b/src/main/resources/static/Student.html
@@ -356,8 +356,8 @@
 
 
                                 <div class="text-center">
-                                    <button onclick="buttonAddMc()" type="submit" class="btn btn-primary">Add Student</button>
-                                    <button type="submit" onclick="buttonUpdateMC()" class="btn btn-secondary">Update Student</button>
+                                    <button onclick="buttonAddMc()" type="submit" class="btn btn-primary" id="addbtn">Add Student</button>
+                                    <button type="submit" onclick="buttonUpdateMC()" class="btn btn-secondary" id="updatebtn">Update Student</button>
                                 </div>
                             </form><!-- End floating Labels Form -->
                         </div>
