--- a/src/main/resources/static/Teacher.html
+++ b/src/main/resources/static/Teacher.html
@@ -30,6 +30,27 @@
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet">
 
+    <!-- jquary -->
+    <script src="assets/Resourse/Jquary/jquary.js"></script>
+
+    <!--  Link scripts  -->
+    <script src="assets/js/common.js"></script>
+    <script src="assets/js/teacher.js"></script>
+
+    <!--iziToast-->
+    <link rel="stylesheet" href="assets/Resourse/iziToast-master/dist/css/iziToast.min.css">
+    <script src="assets/Resourse/iziToast-master/dist/js/iziToast.min.js"></script>
+
+    <!-- Datatable -->
+    <link rel="stylesheet" type="text/css" href="assets/Resourse/Datatables/datatables.min.css">
+
+    <script type="text/javascript" src="assets/Resourse/Datatables/datatables.min.js"></script>
+
+    <!--font awesome-->
+    <script src="assets/Resourse/fontawesome/fontawesome-free-6.2.0-web/js/all.js"></script>
+    <link rel="stylesheet" href="assets/Resourse/fontawesome/fontawesome-free-6.2.0-web/css/all.css">
+
+
 
 </head>
 
@@ -200,53 +221,53 @@
                         <div class="row">
 
                             <!-- Floating Labels Form -->
-                            <form class="row g-3">
+                            <form onsubmit="return false" class="row g-3">
                                 <div class="col-md-6">
                                     <div class="form-floating">
-                                        <input type="text" class="form-control" id="floatingFName"
+                                        <input onkeyup="textFieldValidator(floatingFName,'^[A-Z][a-z]{2,}(?: [A-Z][a-z]*)*$','teacher','first_name','old_teacher')" type="text" class="form-control" id="floatingFName"
                                                placeholder="Your Name">
                                         <label for="floatingFName">First Name</label>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-floating">
-                                        <input type="text" class="form-control" id="floatingLName"
+                                        <input onkeyup="textFieldValidator(floatingLName,'^[A-Z][a-z]{2,}(?: [A-Z][a-z]*)*$','teacher','last_name','old_teacher')" type="text" class="form-control" id="floatingLName"
                                                placeholder="Your Name">
                                         <label for="floatingLName">Last Name</label>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-floating">
-                                        <input type="text" class="form-control" id="floatingDOB"
+                                        <input onkeyup="textFieldValidator(floatingTextarea,'','teacher','address','old_teacher')" type="text" class="form-control" id="floatingTextarea"
                                                placeholder="Your Name">
                                         <label for="floatingDOB">Address</label>
                                     </div>
                                 </div>
-                                <div class="col-md-6">
+                                <div onkeyup="textFieldValidator(floatingMobile,'^[0][7][0,1,2,4,5,6,7,8][0-9]{7}$','teacher','mobile_number','old_teacher')" class="col-md-6">
                                     <div class="form-floating">
-                                        <input type="email" class="form-control" id="floatingEmail"
-                                               placeholder="Your Email">
-                                        <label for="floatingEmail">Mobile</label>
+                                        <input type="text" class="form-control" id="floatingMobile"
+                                               placeholder="Your Mobile">
+                                        <label for="floatingmobile">Mobile</label>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-floating">
-                                        <input type="email" class="form-control" id="floatingNIC"
-                                               placeholder="Your Email">
+                                        <input onkeyup="nicFieldValidator()" type="text" class="form-control" id="floatingNIC"
+                                               placeholder="Your NIC">
                                         <label for="floatingNIC">NIC</label>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-floating">
-                                        <input type="date" class="form-control" id="floatingMobile"
-                                               placeholder="Your Email">
-                                        <label for="floatingMobile">Date of birth</label>
+                                        <input onchange="dateFeildValidate(floatingDOB,'','teacher','dob','old_teacher')" type="date" class="form-control" id="floatingDOB"
+                                               placeholder="Your DOB">
+                                        <label for="floatingDOB">Date of birth</label>
                                     </div>
                                 </div>
 
                                 <div class="col-md-6">
                                     <div class="form-floating">
-                                        <input type="email" class="form-control" id="floatingEmail"
+                                        <input onkeyup="textFieldValidator(floatingEmail,'^[a-z0-9]+@[a-z]+\.[a-z]{2,3}$','teacher','email','old_teacher')" type="email" class="form-control" id="floatingEmail"
                                                placeholder="Your Email">
                                         <label for="floatingEmail">Email</label>
                                     </div>
@@ -254,10 +275,8 @@
 
                                 <div class="col-md-6">
                                     <div class="form-floating mb-3">
-                                        <select class="form-select" id="floatingSelect" aria-label="State">
+                                        <select onchange="selectValidater(floatingSelect,'','teacher','teacher_status_id','old_teacher')" class="form-select" id="floatingSelect" aria-label="State">
                                             <option selected>Select Status</option>
-                                            <option value="1">Oregon</option>
-                                            <option value="2">DC</option>
                                         </select>
                                         <label for="floatingSelect">Teacher Status</label>
                                     </div>
@@ -265,14 +284,14 @@
 
                                 <div class="col-md-12">
                                     <div class="form-floating">
-                                        <input type="Password" class="form-control" id="floatingTPassword"
-                                               placeholder="Your Name">
+                                        <input onkeyup="textFieldValidator(floatingTPassword,'','teacher','te_password','old_teacher')" type="Password" class="form-control" id="floatingTPassword"
+                                               placeholder="Your Password">
                                         <label for="floatingTPassword">Create Password</label>
                                     </div>
                                 </div>
                                 <div class="text-center">
-                                    <button type="submit" class="btn btn-primary">Add Teacher</button>
-                                    <button type="reset" class="btn btn-secondary">Update Teacher</button>
+                                    <button onclick="buttonAddMc()" type="submit" class="btn btn-primary" id="addbtn">Add Teacher</button>
+                                    <button onclick="buttonUpdateMC()" type="submit" class="btn btn-secondary" id="updatebtn">Update Teacher</button>
                                 </div>
                             </form><!-- End floating Labels Form -->
                         </div>
@@ -286,13 +305,14 @@
                     <div class="card-body">
                         <h5 class="card-title">Teacher table</h5>
                         <!-- Table with stripped rows -->
-                        <table class="table datatable">
+                        <table class="table datatable" id="tchr_table">
                             <thead>
                             <tr>
                                 <th scope="col">#</th>
+                                <th scope="col">Teacher ID</th>
                                 <th scope="col">First Name</th>
                                 <th scope="col">Mobile</th>
-                                <th scope="col">NIC</th>
+                                <th scope="col">Status</th>
                                 <th scope="col">Modify</th>
                             </tr>
                             </thead>
@@ -301,9 +321,76 @@
                         <!-- End Table with stripped rows -->
                     </div>
                 </div>
-
             </div>
-        </div>
+
+
+            <!--model for view with print-->
+            <div class="modal fade" id="teacherViewModel" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Student Details</h5>
+                            <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <table id="tablePrintTbl" class="table  table-striped table-hover">
+
+                                <tr>
+                                    <th>Teacher ID</th>
+                                    <td id="td_id"></td>
+                                </tr>
+
+                                <tr>
+                                    <th>Teacher First Name</th>
+                                    <td id="td_fname"></td>
+                                </tr>
+
+                                <tr>
+                                    <th>Teacher Last name</th>
+                                    <td id="td_lname"></td>
+                                </tr>
+
+                                <tr>
+                                    <th>Teacher Mobile</th>
+                                    <td id="td_smobile"></td>
+                                </tr>
+
+                                <tr>
+                                    <th>Teacher Adress</th>
+                                    <td id="td_sadd"></td>
+                                </tr>
+
+                                <tr>
+                                    <th>Teacher NIC</th>
+                                    <td id="td_snic"></td>
+                                </tr>
+
+                                <tr>
+                                    <th>Teacher DOB</th>
+                                    <td id="td_sdob"></td>
+                                </tr>
+
+                                <tr>
+                                    <th>Teacher Email</th>
+                                    <td id="td_semail"></td>
+                                </tr>
+
+                                <tr>
+                                    <th>Teacher Status</th>
+                                    <td id="td_sstatus"></td>
+                                </tr>
+                            </table>
+
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button onclick="teacherPrintModel()" type="button" class="btn btn-primary">Print</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
 
         <!-- End #main -->
