--- a/src/main/resources/static/InstituteImplementation.html
+++ b/src/main/resources/static/InstituteImplementation.html
@@ -237,14 +237,14 @@
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-floating">
-                                        <input onkeyup="textFieldValidator(floatingMobile,'^[0][7][0,1,2,4,5,6,7,8][0-9]{7}$','institute','contact_number','old_institute')" type="text" class="form-control" id="floatingMobile"
+                                        <input onkeyup="textFieldValidator(floatingMobile,'^(?:\\+94|0)?(?:7[0-9]{1}|1[0-9]{1}|2[0-9]{1})[0-9]{7}$','institute','contact_number','old_institute')" type="text" class="form-control" id="floatingMobile"
                                                placeholder="Your Name">
                                         <label for="floatingMobile">Mobile Number</label>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-floating">
-                                        <input onkeyup="textFieldValidator(floatingEmail,'^[a-z0-9]+@[a-z]+\.[a-z]{2,3}$','institute','email','old_institute')" type="email" class="form-control" id="floatingEmail"
+                                        <input onkeyup="textFieldValidator(floatingEmail,'^[0][7,1,3][0-8][0-9]{7}$','institute','email','old_institute')" type="email" class="form-control" id="floatingEmail"
                                                placeholder="Your Email">
                                         <label for="floatingEmail">Email</label>
                                     </div>
